--- a/style.css
+++ b/style.css
@@ -105,3 +105,24 @@ h3 {
   color: #0b5ed7;
   background-color: var(--primary-color);
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  .email-link {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 280px) {
+  .contact-link,
+  .about-link,
+  .email-link {
+    font-size: 14px;
+  }
+  .contact-title {
+    font-size: 30px;
+  }
+}
